--- a/main.css
+++ b/main.css
@@ -5,17 +5,20 @@ header {
 
 main {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
     justify-content: center;
 }
 
-div {
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
+#spacer {
+    width: 200px;
 }
 
 #historyContainer {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -23,4 +26,14 @@ div {
 
 #historyContainer ul {
     list-style-type: none;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    width: 150px;
+    align-items: center;
+}
+
+#historyContainer li {
 }
