--- a/main.css
+++ b/main.css
@@ -31,6 +31,14 @@ main {
     width: 200px;
 }
 
+#bpm {
+    margin: 5px;
+}
+
+#bpmLabel {
+    margin-top: 5px;
+}
+
 #historyContainer {
     display: flex;
     flex-direction: column;
@@ -47,7 +55,4 @@ main {
     padding: 10px;
     width: 150px;
     align-items: center;
-}
-
-#historyContainer li {
 }
